feat(ui): filtro de Indústria com checkboxes\n\n- Troca campo de texto por seleção múltipla\n- Atualiza hints de i18n (en, pt, es, fr)\n- Mantém contrato de API enviando array industryFilters\n\nCo-authored-by: Trae AI

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -269,7 +269,7 @@
       "filterBySectorLabel": "Filter by Sector (multi)",
       "sectorFiltersHint": "Applied before generation: only includes tickers from selected sectors. No selection = All of them (no filter).",
       "filterByIndustryLabel": "Filter by Industry",
-      "industryFiltersHint": "Add industry names separated by commas, e.g., Semiconductors, Software Infrastructure, Banks.",
+  "industryFiltersHint": "Select one or more industries using the checkboxes.",
       "topRankCount": "Stocks ranked per column (Top N)",
       "topRankCountHint": "Ranks top {{count}} per metric at CSV bottom.",
       "strictMode": "Strict Mode",
